fix bugs.