@@ -1,19 +1,20 @@
 plugins {
-    id("java")
+  id("java")
 }
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-    testImplementation(platform("org.junit:junit-bom:5.9.1"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-    implementation(project(":core"))
+  testImplementation(platform("org.junit:junit-bom:5.9.1"))
+  testImplementation("org.junit.jupiter:junit-jupiter")
+  implementation("org.junit.platform:junit-platform-console-standalone:1.11.0-M2")
+  implementation(project(":core"))
 }
 
 tasks.test {
-    useJUnitPlatform()
+  useJUnitPlatform()
 }
 
 tasks.withType<JavaExec> {
@@ -29,6 +30,8 @@ tasks.withType<JavaExec> {
   jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
   jvmArgs("--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED")
   jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/java.io=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED")
   doFirst {
     // Printing the full command
     println("Executing command: ${executable} ${jvmArgs!!.joinToString(" ")} -cp ${classpath.asPath} ${mainClass.get()} ${args!!.joinToString(" ")}")
@@ -37,11 +40,11 @@ tasks.withType<JavaExec> {
 
 
 tasks.compileJava {
-    options.compilerArgs.addAll(listOf("--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"))
+  options.compilerArgs.addAll(listOf("--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"))
 }
 
 tasks.register<JavaExec>("runExample") {
-    args = listOf("example.Main", "-o", "${layout.buildDirectory.get().asFile}/report", "--scheduler", "fifo")
+  args = listOf("example.Main", "-o", "${layout.buildDirectory.get().asFile}/report", "--scheduler", "fifo")
 }
 
 tasks.register<JavaExec>("replay") {
@@ -66,6 +69,35 @@ tasks.register<JavaExec>("runJC") {
   args = listOf(main, "main", "-o", "${layout.buildDirectory.get().asFile}/report", "--logger", "csv", "--iter", "10000", "-s", "10000000") + extraArgs
 }
 
+fun resolveClasspath(classpath: String): List<String> {
+  return classpath.split(":").flatMap { path ->
+    if (path.contains("*")) {
+      val dir = File(path.substringBeforeLast("/"))
+      val pattern = path.substringAfterLast("/")
+      dir.listFiles { _, name -> name.matches(Regex(pattern.replace("*", ".*"))) }
+          ?.map { it.absolutePath }
+        ?: emptyList()
+    } else {
+      listOf(File(path).absolutePath)
+    }
+  }
+}
+
+tasks.register<JavaExec>("runJUnit") {
+  val mainClass = "org.junit.platform.console.ConsoleLauncher"
+  val method = "main"
+  val testCase = properties["testCase"] as String? ?: ""
+  val classPath = resolveClasspath(properties["classpath"] as String? ?: "").map {
+    "-cp $it"
+  }.joinToString(" ")
+  val extraArgs = when (val extraArgs = properties["extraArgs"]) {
+    is String -> extraArgs.split(" ")
+    else -> emptyList()
+  }
+  args = listOf(mainClass, method, "-a", "-m $testCase $classPath --details=verbose",
+      "-o", "${layout.buildDirectory.get().asFile}/report", "--logger", "csv", "--iter", "10000", "-s", "990000000") + extraArgs
+}
+
 tasks.register<JavaExec>("runSCT") {
   val cp = properties["classpath"] as String? ?: ""
   val main = properties["mainClass"] as String? ?: ""
@@ -78,25 +110,25 @@ tasks.register<JavaExec>("runSCT") {
 }
 
 tasks.register<JavaExec>("runArithmeticProgBad") {
-    var jdk = project(":jdk")
-    classpath = sourceSets["main"].runtimeClasspath
-    mainClass.set("example.ArithmeticProgBad")
-    executable("${jdk.layout.buildDirectory.get().asFile}/java-inst/bin/java")
+  var jdk = project(":jdk")
+  classpath = sourceSets["main"].runtimeClasspath
+  mainClass.set("example.ArithmeticProgBad")
+  executable("${jdk.layout.buildDirectory.get().asFile}/java-inst/bin/java")
 }
 
 tasks.register<JavaExec>("runArithmeticProgSfuzz") {
-    val agentPath: String by rootProject.extra
-    val jvmti = project(":jvmti")
-    val jdk = project(":jdk")
-    val instrumentation = project(":instrumentation")
-    classpath = sourceSets["main"].runtimeClasspath
-    executable("${jdk.layout.buildDirectory.get().asFile}/java-inst/bin/java")
-    mainClass.set("cmu.pasta.fray.core.MainKt")
-    args = listOf("example.ArithmeticProgBad", "main", "-o", "${layout.buildDirectory.get().asFile}/report", "--scheduler", "fifo")
-    jvmArgs("-agentpath:${agentPath}")
-    jvmArgs("-javaagent:${instrumentation.layout.buildDirectory.get().asFile}/libs/${instrumentation.name}-${instrumentation.version}-all.jar")
-    doFirst {
-        // Printing the full command
-        println("Executing command: ${executable} ${jvmArgs!!.joinToString(" ")} -cp ${classpath.asPath} ${mainClass.get()} ${args!!.joinToString(" ")}")
-    }
+  val agentPath: String by rootProject.extra
+  val jvmti = project(":jvmti")
+  val jdk = project(":jdk")
+  val instrumentation = project(":instrumentation")
+  classpath = sourceSets["main"].runtimeClasspath
+  executable("${jdk.layout.buildDirectory.get().asFile}/java-inst/bin/java")
+  mainClass.set("cmu.pasta.fray.core.MainKt")
+  args = listOf("example.ArithmeticProgBad", "main", "-o", "${layout.buildDirectory.get().asFile}/report", "--scheduler", "fifo")
+  jvmArgs("-agentpath:${agentPath}")
+  jvmArgs("-javaagent:${instrumentation.layout.buildDirectory.get().asFile}/libs/${instrumentation.name}-${instrumentation.version}-all.jar")
+  doFirst {
+    // Printing the full command
+    println("Executing command: ${executable} ${jvmArgs!!.joinToString(" ")} -cp ${classpath.asPath} ${mainClass.get()} ${args!!.joinToString(" ")}")
+  }
 }
